CORS fix for dev